Basic NLP integration of client input. Started google sheet access but not finished. Might require downloading since using gspread requires service account credentials. Added .env file to store google sheets credentials and sheet ID. Added requirements.txt for backend dependencies. Added .gitignore to ignore .env and __pycache__. Moved frontend files into frontend/ directory and vice versa for backend. BETTER ORGANIZATION YIPPIE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>WiHK - Tour Information Scraper</title>
   </head>
   <body>
@@ -19,6 +19,6 @@
 
     </div>
     
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
